--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Course Introduction</title>
+    <title>Quiz - Python Course</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,10 +16,7 @@
     <a href="project.html">Project</a>
 </div>
 
-<div class="welcome-message">
-    <h1>Welcome to the Python Course</h1>
-    <p>This introductory page will provide you with an overview of the Python course. Click on the tabs to access Lectures, Exercises, Quiz, and Project information.</p>
-</div>
+<!-- Lecture content goes here -->
 
 </body>
 </html>
