--- a/project.html
+++ b/project.html
@@ -95,33 +95,57 @@
         <li>Now that the files are decompressed, you can check their content using the <code>head</code> command on your terminal. You can search online how to use the <code>head</code> command or type <code>head --help</code> to see the usage instructions. You can check the first two lines of each file using the <code>head</code> command.</li>
     </ol>
 
-    <div class="answer">
-        <p><strong>Answer:</strong></p>
-        <p>Run <code>head -n 2</code> to see the first two lines</p>
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
+          <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
+          <p>Run <code>head -n 2</code> to see the first two lines</p>
+      </div>
     </div>
 
     <ol start="3">
         <li>What is the length of chromosome 7 on the reference sequence?</li>
     </ol>
-    <div class="tip">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Open the reference fasta file and read it line by line. In a loop, ignore the first line and get the length of each following line. Don’t forget to remove the trailing newline character from each line. Sum up all the lengths you found.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>Chromosome 7 has 159,345,973 base pairs.</p>
+      </div>
     </div>
 
     <ol start="4">
         <li>How many genes are annotated in the GTF file?</li>
     </ol>
-    <div class="tip">
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>You need to understand the structure of a GTF (gene transfer format) file for this project. Take your time and read up on the file format if you are not sure how to solve this task. To get the number of genes, open the GTF file and read it line by line. In a loop, count all features of type gene.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>There are 58,395 genes annotated in the GTF file.</p>
+      </div>
     </div>
 
     <h2>Architect a Method</h2>
@@ -130,74 +154,138 @@
     <ol>
         <li>How many transcripts can the CFTR gene generate?</li>
     </ol>
-    <div class="tip">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Again, think about the structure of the GTF file. Open the GTF file. In a loop, count all transcript features for the gene.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>The CFTR gene can produce 11 different transcripts.</p>
+      </div>
     </div>
 
     <ol start="2">
         <li>Which of these transcripts is the longest transcript in nucleotides?</li>
     </ol>
-    <div class="tip">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Open the GTF file. Fetch the start and stop positions for each transcript of the CFTR gene to calculate its length. Keep in mind that sequence numbering starts at 1 in the GTF file format.</p>
+      </div>
     </div>
-    <div class="answer">
+
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>The transcript with the id ENST00000003084 is the longest of 11 transcripts and spans 188,703 bases.</p>
+      </div>
     </div>
 
     <ol start="3">
         <li>Fetch the DNA sequence for that transcript.</li>
     </ol>
-    <div class="tip">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Open the reference fasta file. In a loop, ignore the first line and append each line to a list, removing the trailing newline character. Outside the loop, use the join function to concatenate the lines from the list to get the reference sequence. Avoid concatenation inside the loop, as it is slow and wastes memory. Extract the start and stop positions of the longest transcript to fetch its DNA sequence from the reference sequence, but think about where the index starts from.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex3("resultsFile.txt")</code>. The entire sequence can also be found <a href="#">here</a>.</p>
+      </div>
     </div>
 
     <ol start="4">
         <li>Fetch the DNA sequences of all exons for that transcript, spliced together to one sequence.</li>
     </ol>
-    <div class="tip">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>First, you need to save the start and stop positions of all exons of the longest transcript. Then you can use a similar loop to the one you used in task 3 to extract the DNA sequence of each exon. Finally, you need to concatenate the DNA sequences of all exons.</p>
+      </div>
     </div>
-    <div class="answer">
+
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex4("resultsFile.txt")</code>. The correct sequence can also be found <a href="#">here</a>.</p>
+      </div>
     </div>
 
     <ol start="5">
         <li>What are the start positions and sequences of the start_codon and stop_codon for that transcript?</li>
     </ol>
-    <div class="tip">
+
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Find the start_codon and stop_codon features of the longest transcript in the GTF file, including the start positions of the start- and stop-codon. Check that the start_codon has the sequence ATG, and that the stop_codon corresponds to a proper stop codon. Make your program print a warning message in case the transcript does not begin with a start-codon and end with a stop-codon.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>The start codon has the sequence ATG and starts at position 117,480,095.</p>
         <p>The stop codon has the sequence TAG and starts at position 117,667,106.</p>
+      </div>
     </div>
 
     <ol start="6">
         <li>Translate the above sequence of all exons into amino acids, using an implementation of the translation table from the <code>utils.rna</code> package (included in the downloads folder).</li>
     </ol>
-    <div class="tip">
+
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="tip-content">
         <p>Translate the DNA sequence of the concatenated exons into amino acids from the start codon position of the transcript on.</p>
+      </div>
     </div>
-    <div class="answer">
+
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'answer-content')">
         <p><strong>Answer:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex6("resultsFile.txt")</code>. The correct sequence can also be found <a href="#">here</a>.</p>
+      </div>
     </div>
 
     <h2>Find the Patients at Risk</h2>
@@ -208,12 +296,40 @@
     <ol>
         <li>Use BioPython to parse the fasta file and to translate DNA nucleotides into amino acids.</li>
     </ol>
-    <div class="tip">
+    <div class="question">
+      <div class="toggle-btn" onclick="toggleContent(this, 'tip-content')">
         <p><strong>Tip:</strong></p>
+      </div>
+      <div class="answer-content">
         <p>Check the BioPython tutorial on how to parse a fasta file with BioPython. Read up on the built-in translation method and the BioPython translation tables.</p>
+      </div>
     </div>
 
 
+<!-- Script to handle toggling -->
+<script>
+function toggleContent(btn, className) {
+    var content = btn.nextElementSibling;
+    if (content.style.display === "none" || content.style.display === "") {
+        content.style.display = "block";
+        btn.classList.add('expanded');
+    } else {
+        content.style.display = "none";
+        btn.classList.remove('expanded');
+    }
+}
+
+function toggleSection(element) {
+    var content = element.nextElementSibling;
+    if (content.style.display === "none" || !content.style.display) {
+        content.style.display = "block";
+        element.querySelector('.arrow').style.transform = 'rotate(-135deg)';
+    } else {
+        content.style.display = "none";
+        element.querySelector('.arrow').style.transform = 'rotate(45deg)';
+    }
+}
+</script>
 
 </body>
 </html>
