update project html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="welcome-message">
-    <h1>Welcome to the Python Course</h1>
+    <h1>Welcome to Introduction to Python with Application in Bioinformatics</h1>
     <p>This introductory page will provide you with an overview of the Python course. Click on the tabs to access Lectures, Exercises, Quiz, and Project information.</p>
 </div>
 
