--- a/project.html
+++ b/project.html
@@ -84,7 +84,7 @@
 
 
     <p>If you are not familiar with the file formats, read up online on how the files are structured. For example, <a href="assignment/data/gtf-format.md" target="_blank">here</a> you can find a short description of the different (tab-delimited) fields of a GTF file and <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Web&PAGE_TYPE=BlastDocs&DOC_TYPE=BlastHelp" target="_blank">here</a> a general description about the fasta files.</p>
-    <p>Some of the tasks involve outputting long sequences. To make sure they are correct, use the <code>utils.check_answers</code> package (from the <a href="downloads" target="_blank">downloads folder</a>). You can import it that way:</p>
+    <p>Some of the tasks involve outputting long sequences. To make sure they are correct, use the <code>utils.check_answers</code> package (from the <a href="downloads/" target="_blank">downloads folder</a>). You can import it that way:</p>
     <pre><code>from utils import check_answers</code></pre>
     <p>More detailed instructions are given with each task that uses the package.</p>
 
@@ -214,7 +214,7 @@
         <p><strong>Answer:</strong></p>
       </div>
       <div class="answer-content">
-        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex3("resultsFile.txt")</code>. The entire sequence can also be found <a href="#">here</a>.</p>
+        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex3("resultsFile.txt")</code>. The entire sequence can also be found <a href="assignment/results/transcript.ncbi.fasta" target="_blank">here</a>.</p>
       </div>
     </div>
 
@@ -237,7 +237,7 @@
         <p><strong>Answer:</strong></p>
       </div>
       <div class="answer-content">
-        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex4("resultsFile.txt")</code>. The correct sequence can also be found <a href="#">here</a>.</p>
+        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex4("resultsFile.txt")</code>. The correct sequence can also be found <a href="assignment/results/mrna.ncbi.fasta" target="_blank">here</a>.</p>
       </div>
     </div>
 
@@ -284,7 +284,7 @@
         <p><strong>Answer:</strong></p>
       </div>
       <div class="answer-content">
-        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex6("resultsFile.txt")</code>. The correct sequence can also be found <a href="#">here</a>.</p>
+        <p>Write your results to a file and compare it to the correct result using <code>check_answers.ex6("resultsFile.txt")</code>. The correct sequence can also be found <a href="assignment/results/protein.ncbi.fasta" target="_blank">here</a>.</p>
       </div>
     </div>
 
