update test script and mm

--- a/project.html
+++ b/project.html
@@ -266,7 +266,7 @@
     </div>
 
     <ol start="6">
-        <li>Translate the above sequence of all exons into amino acids, using an implementation of the translation table from the <code>utils.rna</code> package (included in the downloads folder).</li>
+        <li>Translate the above sequence of all exons into amino acids, using an implementation of the translation table from the <code>utils.rna</code> package (included in the `utils` folder).</li>
     </ol>
 
 
