--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@
 </div>
 
 <div class="welcome-message">
-    <h1>Welcome to Introduction to Python with Application in Bioinformatics</h1>
-    <p>This introductory page will provide you with an overview of the Python course. Click on the tabs to access Lectures, Exercises, Quiz, and Project information.</p>
+    <h1>Introduction to Python with Application in Bioinformatics</h1>
+
+    <p>This course offers a hands-on introduction to Python programming, tailored specifically for beginners with an interest in bioinformatics. Throughout the course, participants will engage in practical exercises designed to provide a foundational understanding of Python. By starting with the basics and gradually introducing more complex concepts, students will learn to write their own Python scripts from scratch and tailor existing code to address bioinformatics challenges. Through ample practice and guided examples, even those without prior experience will acquire the skills necessary to apply Python effectively in their bioinformatics projects.</p>
 </div>
+    <h1>Precourse materials</h1>
+
+    <h1>Downloads</h1>
+    <ul>
+      <li>
+        <a href="downloads.zip">Data for exercises</a>
+      </li>
+      <li>
+        <a href="assignment/data.zip">Data for the course project</a>
+      </li>
+      <li>
+        <a href="assignment/utils.zip">utils package for the course project</a>
+      </li>
+    </ul>
+
+    <h1>Course staff</h1>
+    <ul>
+      <li>Nanjiang Shu - Teacher (contact: nanjiang.shu@scilifelab.se)</li>
+      <li>Yihan Hu - TA (contact:)</li>
+    </ul>
 
 </body>
 </html>
