--- a/exercises.html
+++ b/exercises.html
@@ -19,12 +19,19 @@
 <!-- exercises content goes here -->
 <div class="main-content" id="exercises">
   <h1>Exercises</h1>
-  <ul>
-    <li><a href="exercises/day1-exercise1.pdf">Day 1 - Exercise 1</a></li>
-    <li><a href="exercises/day1-exercise2.pdf">Day 1 - Exercise 2</a></li>
-    <li><a href="exercises/day1-exercise3.pdf">Day 1 - Exercise 3</a></li>
-    <li><a href="exercises/day1-exercise4.pdf">Day 1 - Exercise 4</a></li>
-  </ul>
+  <ul class=morespace>
+    <h2>Day 1</h2>
+    <ul class=lessspace>
+      <li><a href="exercises/day1/Day_1_exercise_1.html" target="_blank">Day 1 - Exercise 1</a></li>
+      <li><a href="exercises/day1/Day_1_exercise_2.html" target="_blank">Day 1 - Exercise 2</a></li>
+      <li><a href="exercises/day1/Day_1_exercise_3.html" target="_blank">Day 1 - Exercise 3</a></li>
+      <li><a href="exercises/day1/Day_1_exercise_4.html" target="_blank">Day 1 - Exercise 4</a></li>
+    </ul>
+    <h2>Day 2</h2>
+    <ul class=lessspace>
+      <li><a href="exercises/day2/Day_2_exercise_1.html" target="_blank">Day 2 - Exercise 1</a></li>
+      <li><a href="exercises/day2/Day_2_exercise_2.html" target="_blank">Day 2 - Exercise 2</a></li>
+      <li><a href="exercises/day2/Day_2_exercise_3.html" target="_blank">Day 2 - Exercise 3</a></li>
   <!-- Add links for other days -->
 </div>
 
