--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
 
     <p>Please note that the project is not mandatory, and completing the course does not depend on its completion. However, we highly recommend that you attempt to solve the tasks and encourage you to ask questions if something is unclear. Since some of you might not have the time to complete the project during the course hours, we will be expecting questions regarding the project during the week following the course completion. </p>
 
-    <p>The presentation can be found in the <a href="lectures/Day_2.slides.embedded.html" target="_blank">lecture for Day 2</a>.</p>
+    <p>The presentation can be found in the <a href="lectures/Day_2.slides.embedded.html#/60" target="_blank">lecture for Day 2</a>.</p>
 
 
     <h2>Background</h2>
