--- a/lectures/Day_4.slides.html
+++ b/lectures/Day_4.slides.html
@@ -14659,8 +14659,8 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Introduction-to">Introduction to<a class="anchor-link" href="#Introduction-to">&#182;</a></h2><p><img src="img/python-logo-master-flat.png" alt="title"></p>
-<h3 id="with-Application-to-Bioinformatics">with Application to Bioinformatics<a class="anchor-link" href="#with-Application-to-Bioinformatics">&#182;</a></h3><h4 id="--Day-4">- Day 4<a class="anchor-link" href="#--Day-4">&#182;</a></h4>
+<p><img src="img/python-logo-master-flat.png" alt="Python Logo" style="width: 120px; float: right; margin: 0 0 10px 10px;" /></p>
+<h2 id="Introduction-to-Python-with-Application-in-Bioinformatics">Introduction to Python with Application in Bioinformatics<a class="anchor-link" href="#Introduction-to-Python-with-Application-in-Bioinformatics">&#182;</a></h2><h3 id="Nanjiang-Shu">Nanjiang Shu<a class="anchor-link" href="#Nanjiang-Shu">&#182;</a></h3><h4 id="2024-07-18-(Day-4)">2024-07-18 (Day 4)<a class="anchor-link" href="#2024-07-18-(Day-4)">&#182;</a></h4>
 </div>
 </div>
 </div>
