--- a/exercises.html
+++ b/exercises.html
@@ -17,7 +17,7 @@
 </div>
 
 <!-- exercises content goes here -->
-<div class="main-content" id="exercises">
+<div class="welcome-message" id="exercises">
   <h1>Exercises</h1>
   <ul class=morespace>
     <h2>Day 1</h2>
