--- a/project.html
+++ b/project.html
@@ -16,6 +16,8 @@
     <a href="project.html">Project</a>
 </div>
 
+
+<div class="welcome-message">
 <!-- project content goes here -->
     <h1>Introduction</h1>
 
@@ -304,6 +306,8 @@
         <p>Check the BioPython tutorial on how to parse a fasta file with BioPython. Read up on the built-in translation method and the BioPython translation tables.</p>
       </div>
     </div>
+
+</div>
 
 
 <!-- Script to handle toggling -->
