--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     <h1>Introduction to Python with Application in Bioinformatics</h1>
 
     <p>This course offers a hands-on introduction to Python programming, tailored specifically for beginners with an interest in bioinformatics. Throughout the course, participants will engage in practical exercises designed to provide a foundational understanding of Python. By starting with the basics and gradually introducing more complex concepts, students will learn to write their own Python scripts from scratch and tailor existing code to address bioinformatics challenges. Through ample practice and guided examples, even those without prior experience will acquire the skills necessary to apply Python effectively in their bioinformatics projects.</p>
+
     <h1>Precourse materials</h1>
     <p>Before the course start, please read carefully the <a href="precourse.html">Pre-course material</a></p>
+
+    <h1>Course schedule</h1>
+    <p>Please note that this course schedule is approximate.</p>
+    <img src="img/schedule.png" alt="Schedule" width=1000px">
+
 
     <h1>Downloads</h1>
     <ul>
