--- a/index.html
+++ b/index.html
@@ -43,13 +43,44 @@
     </ul>
 
     <h1>Course staff</h1>
-    <ul>
-      <li>Nanjiang Shu - Teacher (contact: nanjiang.shu@scilifelab.se)</li>
-      <li>Yihan Hu - TA (contact:)</li>
-      <li>aaa</li>
-      <li>bbb</li>
-      <li>ccc</li>
-    </ul>
+    <table class="staff">
+      <tr>
+          <th>Photo</th>
+          <th>Name</th>
+          <th>Role</th>
+          <th>Contact</th>
+      </tr>
+      <tr>
+          <td><img src="./lectures/img/nanjiang-shu.jpg" alt="Nanjiang Shu's Photo" /></td>
+          <td>Nanjiang Shu</td>
+          <td>Teacher</td>
+          <td>nanjiang.shu@scilifelab.se</td>
+      </tr>
+      <tr>
+          <td><img src="./lectures/img/can-hou.png" alt="Can Hou's Photo" /></td>
+          <td>Can Hou</td>
+          <td>TA</td>
+          <td>houcan@wchscu.edu.cn</td>
+      </tr>
+      <tr>
+          <td><img src="./lectures/img/yike-gong.png" alt="Yike Gong's Photo" /></td>
+          <td>Yike Gong</td>
+          <td>TA</td>
+          <td>yikegong0518@gmail.com</td>
+      </tr>
+      <tr>
+          <td><img src="./lectures/img/lei-liu.png" alt="Lei Liu's Photo" /></td>
+          <td>Lei Liu</td>
+          <td>TA</td>
+          <td>liulei9513@126.com</td>
+      </tr>
+      <tr>
+          <td><img src="./lectures/img/yihan-hu.jpg" alt="Yihan Hu's Photo" /></td>
+          <td>Yihan Hu</td>
+          <td>TA</td>
+          <td>yihan.hu@ki.se</td>
+      </tr>
+  </table>
 </div>
 
 </body>
