--- a/lectures/Day_5.slides.embedded.html
+++ b/lectures/Day_5.slides.embedded.html
@@ -14649,7 +14649,7 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div>
+</div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -17349,9 +17349,8 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Exercise-1-(~30-minutes)">Exercise 1 (~30 minutes)<a class="anchor-link" href="#Exercise-1-(~30-minutes)">¶</a></h3><ul>
-<li><p>Go to Canvas, <code>Modules -&gt; Day 4 -&gt; Exercise 2 - day 4</code></p>
-</li>
+<h2 id="Take-a-break">Take a break<a class="anchor-link" href="#Take-a-break">¶</a></h2><h2 id="Day-5,-Exercise-1-(~30-minutes)">Day 5, Exercise 1 (~30 minutes)<a class="anchor-link" href="#Day-5,-Exercise-1-(~30-minutes)">¶</a></h2><p><a href="https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html">https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html</a></p>
+<ul>
 <li><p><strong>Easy</strong>:</p>
 <ul>
 <li>Explore the <code>Orange_1.tsv</code></li>
@@ -17359,7 +17358,7 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </li>
 <li><p><strong>Medium/hard</strong>:</p>
 <ul>
-<li>Use Pandas to read IMDB</li>
+<li>Use Pandas to read VCF file</li>
 <li>Explore it by making graphs</li>
 </ul>
 </li>
@@ -17370,8 +17369,6 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </ul>
 </li>
 </ul>
-<p>After exercise, do Quiz 4.2 and then take a break</p>
-<p>After break, working on the project</p>
 </div>
 </div>
 </div>
