--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
 
 <div class="navbar">
     <a href="index.html">Home</a>
+    <a href="precourse.html">Precourse</a>
     <a href="lectures.html">Lectures</a>
     <a href="exercises.html">Exercises</a>
     <a href="quiz.html">Quiz</a>
