--- a/precourse.html
+++ b/precourse.html
@@ -44,7 +44,10 @@
     </li>
     <li>Download all files and scripts needed for exercises from <a href="downloads.zip" target="_blank">here</a></li>
 
-    <li>Please ensure you sign up for an account at <a href="https://yiyan.baidu.com/">ERNIE Bot</a> or <a href="https://chatgpt.com">ChatGPT</a> so that you can participate in AI assisted programming in the final day of the course.</li>
+    <li>Please ensure you sign up for an account on <a href="https://forms.office.com" target="_blank">Microsoft Forms</a>, ass all quizzes will be provided through this platform. Make sure you can open and submit <a href="https://forms.office.com/r/K4VJxYu3dm" target="_blank">this Test Quiz</a></li>
+
+    <li>Please ensure you sign up for an account at <a href="https://yiyan.baidu.com/" target="_blank">ERNIE Bot</a> or <a href="https://chatgpt.com" target="_blank">ChatGPT</a> so that you can participate in AI assisted programming in the final day of the course.</li>
+
   </ul>
 
   <div class="tip">
