--- a/exercises.html
+++ b/exercises.html
@@ -20,20 +20,7 @@
 <!-- exercises content goes here -->
 <div class="welcome-message" id="exercises">
   <h1>Exercises</h1>
-  <ul class=morespace>
-    <h2>Day 1</h2>
-    <ul class=lessspace>
-      <li><a href="exercises/day1/Day_1_Exercise_1.html" target="_blank">Day 1 - Exercise 1</a></li>
-      <li><a href="exercises/day1/Day_1_Exercise_2.html" target="_blank">Day 1 - Exercise 2</a></li>
-      <li><a href="exercises/day1/Day_1_Exercise_3.html" target="_blank">Day 1 - Exercise 3</a></li>
-      <li><a href="exercises/day1/Day_1_Exercise_4.html" target="_blank">Day 1 - Exercise 4</a></li>
-    </ul>
-    <h2>Day 2</h2>
-    <ul class=lessspace>
-      <li><a href="exercises/day2/Day_2_Exercise_1.html" target="_blank">Day 2 - Exercise 1</a></li>
-      <li><a href="exercises/day2/Day_2_Exercise_2.html" target="_blank">Day 2 - Exercise 2</a></li>
-      <li><a href="exercises/day2/Day_2_Exercise_3.html" target="_blank">Day 2 - Exercise 3</a></li>
-  <!-- Add links for other days -->
+  <p>Exercises will be released on the course day</p>
 </div>
 
 </body>
