--- a/lectures/Day_2.slides.embedded.html
+++ b/lectures/Day_2.slides.embedded.html
@@ -14656,7 +14656,23 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Review-of-Day-1">Review of Day 1<a class="anchor-link" href="#Review-of-Day-1">¶</a></h2>
+<h2 id="Review-of-Day-1">Review of Day 1<a class="anchor-link" href="#Review-of-Day-1">¶</a></h2><ul>
+<li>Liternals and their associated data types, variables, and basic operations<ul>
+<li>Numeric, String, Boolean, None</li>
+<li>Collection of data types: List, Tuple, Set and Dictionary</li>
+<li>Naming convention of variables</li>
+</ul>
+</li>
+<li>Built-in functions and operations<ul>
+<li>print, len, max, sum </li>
+</ul>
+</li>
+<li>Loops<ul>
+<li><code>for</code> loop and <code>while</code> loop</li>
+</ul>
+</li>
+<li>How to use if/elif/else statements to control the logic of the code</li>
+</ul>
 </div>
 </div>
 </div>
