--- a/quiz.html
+++ b/quiz.html
@@ -18,6 +18,9 @@
 </div>
 
 <!-- Lecture content goes here -->
+<div class="welcome-message" id="quiz">
+    <p>Quiz will be released on the course day</p>
+</div>
 
 </body>
 </html>
