--- a/lectures/Day_4.slides.embedded.html
+++ b/lectures/Day_4.slides.embedded.html
@@ -14649,16 +14649,36 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div></section></section><section><section>
+</div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Start by doing today's quiz</p>
-<p>Go to Canvas, <code>Modules -&gt; Day 4 -&gt; Review Day 3</code></p>
-<p>~20 minutes</p>
+<h2 id="Review-of-Day-3">Review of Day 3<a class="anchor-link" href="#Review-of-Day-3">¶</a></h2><ul>
+<li>Functions and methods<ul>
+<li><code>functionName()</code></li>
+<li><code>object.functionName()</code></li>
+</ul>
+</li>
+<li>How to write your own functions</li>
+<li>How to write a script taking arguments from the command line<ul>
+<li>outcome: a software that can be reused by others</li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="Review-of-quiz-from-yesterday">Review of quiz from yesterday<a class="anchor-link" href="#Review-of-quiz-from-yesterday">¶</a></h2>
 </div>
 </div>
 </div>
@@ -16947,6 +16967,31 @@ timeit(method)
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Read-more:">Read more:<a class="anchor-link" href="#Read-more:">¶</a></h3><p><a href="https://realpython.com/documenting-python-code/">https://realpython.com/documenting-python-code/</a></p>
 <p><a href="https://www.python.org/dev/peps/pep-0008/?#comments">https://www.python.org/dev/peps/pep-0008/?#comments</a></p>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h3 id="Introduction-to-Biopython">Introduction to Biopython<a class="anchor-link" href="#Introduction-to-Biopython">¶</a></h3>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="CodeMirror cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
