--- a/lectures/Day_2.slides.embedded.html
+++ b/lectures/Day_2.slides.embedded.html
@@ -15606,7 +15606,7 @@ GCTTAGCTAGCTAGCTAGCTTAGCTA
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [43]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [4]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="CodeMirror cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">seqfile</span> <span class="o">=</span> <span class="s2">"../files/one_dna_sequence.fa"</span>
@@ -15620,7 +15620,7 @@ GCTTAGCTAGCTAGCTAGCTTAGCTA
 
 <span class="n">outfile</span> <span class="o">=</span> <span class="s2">"../files/output/length_of_dna_sequence.txt"</span>
 <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">outfile</span><span class="p">,</span> <span class="s2">"w"</span><span class="p">)</span> <span class="k">as</span> <span class="n">file</span><span class="p">:</span>
-    <span class="n">file</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s2">"Length of DNA sequence:"</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">total_count</span><span class="p">))</span>
+    <span class="n">file</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s2">"Length of DNA sequence: "</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">seqlength</span><span class="p">))</span>
 </pre></div>
 </div>
 </div>
